--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "mongodb": "^6.8.1",
     "next": "14.2.5",
     "nodemailer": "^6.9.14",
     "react": "^18",
@@ -17,6 +18,7 @@
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
+    "@types/mongodb": "^4.0.7",
     "@types/node": "^20.14.15",
     "@types/nodemailer": "^6.4.15",
     "@types/react": "^18",
